--- a/CODE/1_Unsupervised/3-K-Means-Clustering.ipynb
+++ b/CODE/1_Unsupervised/3-K-Means-Clustering.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e747ac74",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "1c715233",
    "metadata": {},
    "outputs": [],
@@ -93,10 +93,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "e11a9452",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1224558901.py, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn [6], line 5\u001b[0;36m\u001b[0m\n\u001b[0;31m    symbols = symbols[(symbols[\"Symbol\"] is in tickers)] # G = NASDAQ GLOBAL MARKET\u001b[0m\n\u001b[0m                                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# Get New or Load Existing Data\n",
     "# Allow 15 mins for new data\n",
@@ -110,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "0aa4fa37",
    "metadata": {},
    "outputs": [
@@ -352,7 +361,7 @@
        "[5 rows x 265 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -775,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "ff0af6cb",
    "metadata": {},
    "outputs": [
@@ -807,49 +816,49 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>AADR</td>\n",
-       "      <td>DAX</td>\n",
-       "      <td>0</td>\n",
+       "      <th>366</th>\n",
+       "      <td>IGIB</td>\n",
+       "      <td>VCLT</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>FPXI</td>\n",
-       "      <td>IBB</td>\n",
-       "      <td>0</td>\n",
+       "      <th>367</th>\n",
+       "      <td>IGIB</td>\n",
+       "      <td>USIG</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>FNX</td>\n",
-       "      <td>PSCC</td>\n",
-       "      <td>0</td>\n",
+       "      <th>368</th>\n",
+       "      <td>IGIB</td>\n",
+       "      <td>SHY</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>FNX</td>\n",
-       "      <td>INDY</td>\n",
-       "      <td>0</td>\n",
+       "      <th>369</th>\n",
+       "      <td>ANGL</td>\n",
+       "      <td>VTIP</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>FNK</td>\n",
-       "      <td>VYMI</td>\n",
-       "      <td>0</td>\n",
+       "      <th>370</th>\n",
+       "      <td>EMCB</td>\n",
+       "      <td>IEI</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  base_asset compare_asset  label\n",
-       "0       AADR           DAX      0\n",
-       "1       FPXI           IBB      0\n",
-       "2        FNX          PSCC      0\n",
-       "3        FNX          INDY      0\n",
-       "4        FNK          VYMI      0"
+       "    base_asset compare_asset  label\n",
+       "366       IGIB          VCLT      2\n",
+       "367       IGIB          USIG      2\n",
+       "368       IGIB           SHY      2\n",
+       "369       ANGL          VTIP      2\n",
+       "370       EMCB           IEI      2"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -857,7 +866,8 @@
    "source": [
     "# Load Cointegrated Pairs\n",
     "df_coint = pd.read_csv(file_name_coint).iloc[:, 1:]\n",
-    "df_coint.head()"
+    "df_coint.head()\n",
+    "df_coint.tail()"
    ]
   },
   {
@@ -1319,9 +1329,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "MLTrading",
    "language": "python",
-   "name": "python3"
+   "name": "mltrading"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1333,7 +1343,36 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.13"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
