--- a/PRIMERS/4-Feature-Engineering-101.ipynb
+++ b/PRIMERS/4-Feature-Engineering-101.ipynb
@@ -888,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "58acadde",
    "metadata": {},
    "outputs": [
@@ -896,7 +896,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Is Null:  False\n",
+      "Is Null:  True\n",
       "Is Inf:  False\n"
      ]
     }
@@ -942,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "7b6648f0",
    "metadata": {},
    "outputs": [
@@ -1090,7 +1090,7 @@
        "4       0.0           0.0  0.003725  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1112,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "612c53ed",
    "metadata": {},
    "outputs": [
@@ -1222,7 +1222,7 @@
        "2  2920000  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1236,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "a6b90980",
    "metadata": {},
    "outputs": [
@@ -1264,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "47d4d710",
    "metadata": {},
    "outputs": [
@@ -1298,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "c7539905",
    "metadata": {},
    "outputs": [
@@ -1308,7 +1308,7 @@
        "RandomForestRegressor(max_depth=10, random_state=0)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1321,7 +1321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "id": "abf3bcfe",
    "metadata": {},
    "outputs": [
@@ -1344,7 +1344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "id": "7396d9d3",
    "metadata": {},
    "outputs": [],
@@ -1357,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "id": "e23dd235",
    "metadata": {},
    "outputs": [
@@ -1399,9 +1399,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "MLTrading",
    "language": "python",
-   "name": "python3"
+   "name": "mltrading"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1413,7 +1413,36 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.13"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
