--- a/PRIMERS/5-Market-Efficiency-Testing-101.ipynb
+++ b/PRIMERS/5-Market-Efficiency-Testing-101.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "0110bcc8",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "00861d85",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
        "      <td>323.540009</td>\n",
        "      <td>324.869995</td>\n",
        "      <td>59151200.0</td>\n",
-       "      <td>312.395020</td>\n",
+       "      <td>312.395050</td>\n",
        "      <td>0.009352</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -127,12 +127,12 @@
        "\n",
        "             Adj Close   Returns  \n",
        "Date                              \n",
-       "2020-01-02  312.395020  0.009352  \n",
+       "2020-01-02  312.395050  0.009352  \n",
        "2020-01-03  310.029541 -0.007572  \n",
        "2020-01-06  311.212311  0.003815  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "2d129007",
    "metadata": {},
    "outputs": [],
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "34881200",
    "metadata": {},
    "outputs": [],
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "377ed416",
    "metadata": {},
    "outputs": [
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "fdaccb67",
    "metadata": {},
    "outputs": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "52a60fc4",
    "metadata": {},
    "outputs": [],
@@ -295,17 +295,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "d8ad3dfa",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.4004831540110269"
+       "0.40048315401102663"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "73bf2d87",
    "metadata": {},
    "outputs": [
@@ -334,7 +334,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.251083465474839e-11 True\n",
+      "6.251083465473339e-11 True\n",
       "If < 0.05 and True then we can reject the null hypothesis and conclude that the index is stationary\n"
      ]
     }
@@ -380,9 +380,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "MLTrading",
    "language": "python",
-   "name": "python3"
+   "name": "mltrading"
   },
   "language_info": {
    "codemirror_mode": {
@@ -394,7 +394,36 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.13"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
